package de.dhbw.model.train;

public class PassengerWagon extends BaseWagon {
}
