package de.dhbw.model.train;

public interface Wagon {

    int getOrder();
    void setOrder(int order);
}